# skampi

./: .bashrc  .coverage  .env  .flake8  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml_skampi  .gitmodules  .pylintrc  .readthedocs.yaml  .release  CODEOWNERS  CODEOWNERS.txt  Dockerfile  LICENSE  Makefile  Pipfile  README.md  Vagrantfile  Webjive_dashboard_sp-1623_sp-1643.wj  XTP-1310.feature  XTP-1310_VN.feature  XTP-1310_VN.feature.txt  acc_tests.mk  app.py  archiver.mk  assign_resources.json  attribute_config.yaml  attribute_config_low.yaml  attribute_config_mid.yaml  callback.dump  conf.py  custom_gitlab_values.yaml  delay_demo.dump  demo-ss-27  dev-testing.mk  dev.sh  docker-compose.yml  docstatus.py  explore_exc_msg.dump  (+42 more)
.make/tests/resources/: CMakeLists.txt  Makefile  Pipfile  README.md  docker-requirements.txt  pyproject.toml.altsrc  pyproject.toml.badsrc  pyproject.toml.default  setup.cfg  setup.py
docs/: Makefile  Pipfile  pyproject.toml  requirements.txt
docs/analysis/: README.md  conf.py
docs/src/: A&A.rst  AnA.rst  README.md  acceptance-testing-readme.md  conf.py  conf.py_old  deploy_on_p3.rst  deployment.rst  environments.rst  gui.rst  helm.rst  index.rst  integrating.rst  kubernetes.rst  multitenancy.rst  pipelines.rst  resources-auth-readme.md  resources-readme.md  resources.rst  skampi.rst  subsystems.rst  templates.rst  testing-pod-readme.md  testing.rst  triage.rst  vscode.rst
docs/src/_old/: deployment.rst  environments.rst  resources.rst  scripts-readme.md  skampi.rst  templates.rst  triage.rst
docs/src/alarm-handler/: CONFIGURE_AND_TEST_ALARM.rst
docs/src/apis/: general_mandc.rst  obs_mandc.rst  operational_mandc.rst
docs/src/deployment/: cia.rst  deploy_on_p3.rst  helm.rst  kubernetes.rst  mid-itf.rst  multitenancy.rst  psi.rst  remote_deploy.rst
docs/src/package/: guide.rst
docs/src/testing/: skampi_fixtures.rst  testing.rst  testing_infrastructure.rst  testing_locally.rst
post-deployment/: Makefile  README.md  SUT_requirements.txt  pytest.ini  setup.cfg  test_requirements.txt
post-deployment/.devcontainer/: .bashrc  Dockerfile  devcontainer.json  test_requirements.txt  vscode_requirements.txt
post-deployment/exploration/: __init__.py  chart_sets.txt  explore_event_subscription.py  pub_imm.yaml  pub_period.yaml  set_micro_polling.py  spec.yaml  spec2.yaml
post-deployment/exploration/dev_testing/: Chart.yaml  values.yaml
post-deployment/exploration/event_generator/: event_generator.yaml
post-deployment/exploration/explore_event_subscription/: explore_event_subscription.py  pub_imm.yaml  pub_imm_cons_per.yaml  spec2.yaml
post-deployment/exploration/templates/: get_labels.tpl
post-deployment/exploration/test_runs/: run_it.py
post-deployment/exploration/tests/: conftest.py  test_explore_assign_resources.py  test_explore_configuring.py  test_explore_telescope_start_up.py  test_module1.py  test_module2.py
post-deployment/exploration/web_pytest/: async_threading.py  decorators.py  test_executor.py  web_pytest.py
post-deployment/features/: 1.basic.feature  1_XR-13_XTP-494.feature  AT2-577_PUB_SUB.feature  ObsReset.feature  XTG-131.feature  XTP-1001.feature  XTP-1079.feature  XTP-1080.feature  XTP-1096.feature  XTP-1104.feature  XTP-1106.feature  XTP-1156.feature  XTP-1188.feature  XTP-1208.feature  XTP-1209.feature  XTP-1310.feature  XTP-1471.feature  XTP-1566.feature  XTP-1567.feature  XTP-2328.feature  XTP-2398.feature  XTP-2413.feature  XTP-3090.feature  XTP-4444.feature  XTP-776.feature  XTP-782.feature  XTP-795.feature  XTP-813.feature  XTP-826.feature  XTP-966.feature  XTP-AT1-887.feature  abort.feature  configure_transitions.feature  obsreset.feature  restart.feature  temp.feature  test_ABORTED.feature  tmc-mccs-bdd.feature  transitions.feature
post-deployment/resources/: ipython_config.py  namespace_auth.sh
post-deployment/resources/log_consumer/: client_syslog.py  log_consumer.py  server_syslog.py  tracer_helper.py
post-deployment/resources/skallop_plugins/: entry_point_synch.py  set_to_wait.py  tmc_entry_point.py
post-deployment/resources/test_data/: README.md  example_allocate.json  polaris_b1_no_cam.json  scan_definitions.csv  scanrunner.py
post-deployment/resources/test_support/: README.md  archiver.py  controls.py  controls_low.py  elastic_queries.py  event_waiting.py  event_wating.py  fixtures.py  helpers.py  helpers_low.py  log_helping.py  logging_decorators.py  mappings.py  mappings_low.py  oet_helpers.py  persistance_helping.py  state_checker.py  state_checking.py  subscribing.py  sync_decorators.py  sync_decorators_low.py  tmc_helpers.py  tmc_helpers_low.py  waiting.py
post-deployment/resources/testing_auth/: Chart.yaml
post-deployment/test-harness/: setup.py
post-deployment/tests/: conftest.py
post-deployment/tests/bugs/: test_skb1.py  test_skb3.py
post-deployment/tests/smoke/: test_SKB_17.py  test_archiver.py  test_bdd_device.py  test_controls.py  test_decorators.py  test_device_logging.py  test_devices.py  test_dish_subscription.py  test_event_waiting.py  test_helpers.py  test_landing_page_loads.py  test_logging_namespace.py  test_multisubarray.py  test_mvp_clean.py  test_oet_helpers.py  test_quarantine.py  test_scan_id.py  test_start-up-telescope.py  test_state_checker.py  test_subscribing.py  test_tracer.py  test_validate_bdd_tests.py  (+4 more)
test-harness/: Makefile  README.md  install_oet.sh  pytest.ini  report.json  setup.cfg  setup.py  test_requirements.txt
test-harness/acceptance_tests/: .tests.py.swp  Makefile  README.md  bdd-tests.py  helpers.py  releaseResources_bdd_test.py  tests.py
test-harness/files/: mutation.json
test-harness/test-support/: Makefile
test-harness/test_support/: Makefile  helpers.py
test-harness/tests/: 1.feature  __init__.py  conftest.py  test_1_devices.py  test_2_start-up-telescope.py  test_3_logging_stack_is_nominal.py  test_4_archiver.py  test_5_bdd_concept.py  test_5_logging_namespace.py  test_5_multisubarray.py  test_6_multisubarray.py  test_7_start_up_telescope_bdd.py  test_8_bdd_trial.py  test_8_tmcprototype_logging.py  test_archiver.py
(+1280 files in other folders)
