[tool.poetry]
name = "ska-skampi-tests"
version = "0.1.0"
description = "Integration tests to be used on ska low and ska mid software"
authors = ["Your Name <you@example.com>"]
license = "BSD"
readme = "README.md"
packages = [{include = "tests/integration"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest-repeat = "^0.9.1"
kubernetes = "^21.7.0"
pytest-cov = "^3.0.0"
pytest-forked = "^1.4.0"
pytest-json-report = "^1.4.1"
pytest-metadata = "^1.11.0"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.5.0"
requests = "^2.26.0"
assertpy = "^1.1"
pytest-timeout = "^2.0.2"
pytest-ordering = "^0.6"
pipe = "^1.6.0"
ska-ser-skallop = "2.27.2"
atlassian-python-api = "^3.25.0"
ska-tmc-cdm = "7.3.1"
ska-oso-scripting = "7.0.0"
ska-oso-oet-client = "^1.0.0"
ska-db-oda = "^1.6.1"
ska-oso-oet="5.0.0"

[[tool.poetry.source]]
name = 'ska'
url = 'https://artefact.skatelescope.org/repository/pypi-all/simple'


[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^6.0.0"
Flake8-pyproject = "^1.1"
black = "^22.8.0"
ipython = "^7.30.1"
pylint = "^2.12.2"
pylint-junit = "^0.3.2"

[tool.flake8]
rst-directives = "literalinclude"
rst-roles = ["py:attr", "py:class", "py:const", "py:exc", "py:func", "py:meth", "py:mod"]
docstring-style = "sphinx"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"