[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True

[tool:pytest]
collect_ignore_glob = ['*_dev.py']
log_cli = True
log_cli_level = INFO
log_file = pytest-logs.txt
log_file_level = INFO
testpaths = tests
addopts = --json-report --json-report-file=report.json --junitxml=report.xml --cucumberjson=cucumber.json
markers =
    slow: marks tests as slow
    medium: marks tests as medium
    fast: marks tests as fast
    regression: mark test as regression test
    working_in_progress: mark test that can fail
    unit: mark the test as test level unit
    api: mark the test as test level api
    component: mark the test as test level component
    e2e: mark the test as test level e2e

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
