[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True

[tool:pytest]
collect_ignore_glob = ['*_dev.py']
log_cli = True
junit_family=xunit1
log_cli_level = INFO
log_file = pytest-logs.txt
log_file_level = INFO
testpaths = tests
addopts = --json-report --json-report-file=report.json --junitxml=report.xml --cucumberjson=cucumber.json
markers =
    slow: marks tests as slow
    medium: marks tests as medium
    fast: marks tests as fast
    pytest.mark.fast: just because of a bug in the plugin
    last: test will be forced to run last
    first: test will be forced to run first
    regression: mark test as regression test
    working_in_progress: mark test that can fail
    unit: mark the test as test level unit
    api: mark the test as test level api
    component: mark the test as test level component
    e2e: mark the test as test level e2e
    tracer: mark the test as a tracer test
    logging: tests related to logging
    archiver: mark test as archiver test
    select: mark a test for a sub selection, to run only partial tests
    XTG-131: tests related to feature XT-131
    VTS-221: tests related to feature VTS-221
    XTP-417: tests related to feature XTP-417
    XTP-427: tests related to feature XTP-427
    XTP-428: tests related to feature XTP-428
    XTP-436: tests related to feature XTP-436
    XTP-811: tests related to feature XTP-811
    XTP-494: tests related to feature XTP-494
    XTP-826: tests related to Multiscan Capability
bdd_features_base_dir = features                    


# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
