[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True

[tool:pytest]
testpaths = tests
addopts = --json-report --json-report-file=report.json --junitxml=report.xml --cucumberjson=cucumber.json

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
