[tool.poetry]
name = "ex02"
version = "0.1.0"
description = "Minimal Web Application"
authors = ["Piers Harding <p.harding@skao.int>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.9"
bottle = "^0.12.19"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.8.0"
pylint = "^2.8.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
